--- a/README.Rmd
+++ b/README.Rmd
@@ -17,31 +17,36 @@ knitr::opts_chunk$set(
 The `VisualResume` package contains the `VisualResume.R` function which produces a Visual resume like the one below:
 
 ```{r echo = TRUE, fig.width = 13, fig.height = 10}
+
 VisualResume::VisualResume(
- titles.left = c("Walter White, PhD", "Chemistry, Cooking, Pizza", "*Built with love in R using the InfoResume package: www.ndphillips.github.io/inforesume"),
-titles.right = c("www.lospolloshermanos.com", "TheOneWhoKnocks@gmail.com", "Full Resume: www.ndphillips.github.io"),
+ titles.left = c("Diego J. Lizcano, PhD", "Wildlife biologist, Mammals, Photography", "*Built with love in R using the VisualResume package: https://github.com/ndphillips/VisualResume"),
+titles.right = c("WebSite: http://dlizcano.github.io", "email: dj.lizcano@gmail.com", "Full Resume: http://dlizcano.github.io/about"),
 titles.right.cex = c(2, 2, 1),
 titles.left.cex = c(4, 2, 1),
-timeline.labels = c("Education", "Teaching"),
-timeline = data.frame(title = c("Grinnell Col", "Ohio U", "U of Basel", "Max Planck Institute", "Old Van", "Gray Matter", "Sandia Laboratories", "J.P. Wynne High School", "A1A Car Wash"),
-                      sub = c("BA. Student", "MS. Student", "PhD. Student", "PhD. Researcher", "Methamphetamine Research", "Co-Founder", "Chemist", "Chemistry Teacher", "Co-Owner"),
-                      start = c(1976, 1980.1, 1982.2, 1985, 1996.5, 1987, 1991, 1995, 2001),
-                      end = c(1980, 1982, 1985, 1987, 1998, 1992, 1995, 1998, 2003),
-                      side = c(1, 1, 1, 1, 1, 0, 0, 0, 0)),
-milestones = data.frame(title = c("BA", "MS", "PhD"),
-                        sub = c("Mathematics", "Chemistry", "Chemistry"),
-                        year = c(1980, 1982, 1985)),
-events = data.frame(year = c(1985, 1995, 1997, 1999, 2012),
-                    title = c("Contributed to Nobel Prize winning experiment.",
-                              "Honorary mention for best Chemistry teacher of the year.",
-                              "Created Blue Sky, the most potent methamphetamine ever produced.",
-                              "Made first $1,000,000.",
-                              "White, W., & Pinkman, J. (2012). Blue Sky: A method of [...].\nJournal of Psychopharmical Substances, 1(1),.")),
-interests = list("programming" = c(rep("R", 10), rep("Python", 1), rep("JavaScript", 2), "MatLab"),
-                 "statistics" = c(rep("Decision Trees", 10), rep("Bayesian", 5), rep("Regression", 3)),
-                 "leadership" = c(rep("Motivation", 10), rep("Decision Making", 5), rep("Manipulation", 30))),
+timeline.labels = c("Education ", "Teaching - Reseach"),
+timeline = data.frame(title = c("Los Andes U. (COL)", "Los Andes U. (COL)", "Kent U. (UK)", "Pamplona U. (COL)", "World Bank", "CI (USA)", "CSF", "ULEAM (ECU)", "ULEAM (ECU)", "TNC (COL)"),
+                      sub = c("BSc. Student", "Research Assistant", "PhD. Student", "Researcher-Professor",  "Consultant", "Visiting Scientist", "Research Fellow", "Project Leader", "Profesor", "Biodiversity specialist"), # wordl bank and CI are troked for display
+                      start = c(1990, 1996  , 2001, 2006  , 2012.1, 2012.1, 2013, 2014.2, 2015.2, 2016.2),
+                      end = c(1996.1, 2001, 2006, 2012.1, 2013.2, 2012.2, 2014, 2015.2, 2016, 2018),
+                      side = c(1, 0, 1, 0, 1, 1, 0, 1, 1, 0)), # 1 arriba, 0 abajo
+milestones = data.frame(title = c("BSc",  "PhD"),
+                        sub = c("Biology",  "Biodiversity Management"),
+                        year = c(1996,  2006)),
+events = data.frame(year = c(2000, 2001, 2002, 2003, 2013, 2015),
+                    title = c("Lizcano, D. J., &  Cavelier J. 2000. Biotropica 32:165 173.",
+                              "Lizcano, D. J., &  Cavelier J. 2000. Journal of Zoology 252:429 435.",
+                              "Lizcano et. al., 2002. Journal of Biogeography 29:7 15.",
+                              "Lizcano, D. J., & Cavelier J. 2004. Tapir Conservation 13:18–23.",
+                              "Ahumada, J. A., J. Hurtado, and D. Lizcano. 2013. PLoS ONE 8:e73707.",
+                              "Ortega-Andrade, H. M., Prieto-Torres, Ǵomez-Lora, and D. J. Lizcano. 2015.\nPLoS ONE 10:e0121137.")),
+interests = list("programming" = c(rep("R", 19), rep("LaTex", 2), rep("HTML", 10), "Python - Julia"),
+                 "Statistics" = c(rep("GLMM", 6), rep("Bayesian", 8), rep("Occu Models", 2), 
+                                  rep("Random Forest", 3)),
+                 "Capacity building" = c(rep("Motivation", 15), rep("Decision", 1), rep("Leadership", 10))),
 year.steps = 2
 )
+
+
 ```
 
 
